--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <!-- Smartsupp Live Chat script -->
-<script type="text/javascript">
-var _smartsupp = _smartsupp || {};
-_smartsupp.key = '8ab2347733e6eb32fd2c0cd41d02c917f3e6b903';
-window.smartsupp||(function(d) {
-  var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
-  s=d.getElementsByTagName('script')[0];c=d.createElement('script');
-  c.type='text/javascript';c.charset='utf-8';c.async=true;
-  c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
-})(document);
-</script>
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="7b5fb076-e4c9-4fa9-aea5-2be2daf9ecb4";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
