--- a/page1.html
+++ b/page1.html
@@ -29,7 +29,7 @@
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         <span class="mbr-brand__logo"><a href="https://mobirise.com"><img src="assets/images/alpha2h.gif" class="mbr-navbar__brand-img mbr-brand__img" alt="Mobirise"></a></span>
-                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="http://mobiriseforum.co.uk" target="_blank">wilzamguerrero</a></span>
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="index.html">wilzamguerrero</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
@@ -46,8 +46,8 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-n" data-rv-view="151" style="background-image: url(assets/images/a1-6-1920x1102.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="151" style="background-image: url(assets/images/a1-6-1920x1102.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
@@ -304,7 +304,7 @@
                             <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="CONTACTO">
-                            <input type="hidden" value="MMwM2slz+hii6TDQ0WZlGZUF0pRv/r9gbPhVMJ0EJBDj6lOKSQ2hoZ+2XKrSO+zucY35ylHkSad0z9/sQU92OjhxY0uOdjTOexbzLqAkAOhh1YEX++1/LMkuaWzrDsge" data-form-email="true">
+                            <input type="hidden" value="dP8W0ulApcCrYbBb09urSIEnO7oRUnADmPeQ/h2LYLDZnBBVB/Pcu5Ua/gB1Cqx3VwxTeLZkhm3l3AH2+LydX7v79NAnhGUfMKRRFozL5kLVSExT/oySaShBLLwTH/2b" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                             </div>
