--- a/page1.html
+++ b/page1.html
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="151" style="background-image: url(assets/images/a1-6-1920x1102.jpg);">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="151" style="background-image: url(assets/images/a1-6-1920x1102.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -56,7 +56,7 @@
                         <h1 class="mbr-hero__text"><br><br><br><br><br><br>ANIMACIÓN 3D</h1>
                         <p class="mbr-hero__subtext">CURSO DE ANIMACIÓN 3D PROFESIONAL NIVEL 1</p>
                     </div>
-                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-danger" href="https://mobirise.com">INFORMACIÓN</a> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-success" href="page2.html#header4-w">PAGO</a></div>
+                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-danger" href="page1.html#header2-u">INFORMACIÓN</a> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-success" href="page2.html#header4-16">PAGO</a></div>
                 </div></div>
             </div></div>
         </div>
@@ -98,7 +98,7 @@
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-left">
                 <div class="row"><div class=" col-sm-6 col-sm-offset-6">
                     <div class="mbr-hero animated fadeInUp">
-                        <h1 class="mbr-hero__text">DESCRIPCIÓN</h1>
+                        <h1 class="mbr-hero__text">INFOR</h1>
                         <p class="mbr-hero__subtext">Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface.</p>
                     </div>
                     
@@ -304,7 +304,7 @@
                             <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="CONTACTO">
-                            <input type="hidden" value="dP8W0ulApcCrYbBb09urSIEnO7oRUnADmPeQ/h2LYLDZnBBVB/Pcu5Ua/gB1Cqx3VwxTeLZkhm3l3AH2+LydX7v79NAnhGUfMKRRFozL5kLVSExT/oySaShBLLwTH/2b" data-form-email="true">
+                            <input type="hidden" value="JrXNmLysHYEtZ1bTKAe8YODC7YtCgejXpYJHjBDgMcm72r4aza+b0NZPj1jIoc+Gcgsiimk+7G8cNqM8Xjs0Rv0MpjpEEHRYNujS/BWe4xKoDmuory3KL/bA7le9fuoj" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                             </div>
