--- a/cursos.html
+++ b/cursos.html
@@ -49,8 +49,8 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
@@ -362,7 +362,7 @@
                             <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="CONTACTO">
-                            <input type="hidden" value="3+aUhhNsxHGbdqSDbiKLT8jTSp4DKaFtT6QRyQGjDMj+gDeiqft+T6ytfe9hDDCg8K9ixh97Q+NfCXABanMck6h12bxstltnt2asCPe6OjPCFk2ZA5Q2lHaIpzwQvs4Y" data-form-email="true">
+                            <input type="hidden" value="5CXkuAF0S/kN8tTu5HyLgyvXKlLYTttFMD8QhjdiZE7j8V0kSLr2RFSibusLudKb0zYG6t5AC4UNSniNYgCTOIwBgxU7+1LHC3JQgd0AgdqxohOCuTM/CNnllxcBQ8bR" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                             </div>
