--- a/cursos.html
+++ b/cursos.html
@@ -49,8 +49,8 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
@@ -59,7 +59,7 @@
                         <h1 class="mbr-hero__text"><br><br><br><br><br><br>ANIMACIÓN 3D</h1>
                         <p class="mbr-hero__subtext">CURSO DE ANIMACIÓN 3D PROFESIONAL NIVEL 1<br></p>
                     </div>
-                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-danger" href="page1.html#header2-u">INFORMACIÓN</a> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-success" href="page2.html#header4-16">PAGAR</a></div>
+                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-danger" href="page1.html#header2-u">INFORMACIÓN</a> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-success" href="pagar.html#header4-16">PAGAR</a></div>
                 </div></div>
             </div></div>
         </div>
@@ -362,7 +362,7 @@
                             <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="CONTACTO">
-                            <input type="hidden" value="5CXkuAF0S/kN8tTu5HyLgyvXKlLYTttFMD8QhjdiZE7j8V0kSLr2RFSibusLudKb0zYG6t5AC4UNSniNYgCTOIwBgxU7+1LHC3JQgd0AgdqxohOCuTM/CNnllxcBQ8bR" data-form-email="true">
+                            <input type="hidden" value="WfYDjOXRb1pqiaLtqRk8seD+ZH6pJWomPS/Is9P4qzCYkfNKxonAb7unXHj98nKRfkIHqpD9+tCAyt40SS7b+yXZ9cBCvwlbw9EQ6VyG1QDbRdqADM23OOrX4hqX1zJ+" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                             </div>
