--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-164" data-rv-view="2" style="background-image: url(assets/images/v13n-1920x1080.jpg);">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-164" data-rv-view="2" style="background-image: url(assets/images/v13n-1920x1080.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(0, 0, 0);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -85,7 +85,7 @@
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 124px;">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="mbr-buttons mbr-buttons--center btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-danger" href="page1.html#header4-n">CURSOS<br></a></div>
+                <div class="mbr-buttons mbr-buttons--center btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-danger" href="cursos.html#header4-n">CURSOS<br></a></div>
             </div>
         </div>
     </div>
@@ -364,7 +364,7 @@
                     <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="i7oAryIK4I2YgYwvK2KiM+38DIv99RKyvyMNnTUF3x1/DH+cXQCbyGxuuO/cQmF8CVDCeEl9X8wFuxrZxFw1UVPaF69lX2VO1Ney2ZE3XfvKg7Kb3Q6uTsmltH1BE8T/" data-form-email="true">
+                    <input type="hidden" value="MKGjWecyZsPkXVtEvGzHmntr3IXUjqOGS5E2ED1bL+bg2KU0D8q/NjkjP3Uj8AbdOWsIxZzezYdPz2r/9rPHJnNdJRvLv6SzXN0nRq680MMyZzO+QjQ0suKT1D8EHRQA" data-form-email="true">
                     <div class="form-group">
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                     </div>
