--- a/pagar.html
+++ b/pagar.html
@@ -45,14 +45,14 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-16" data-rv-view="126" style="background-image: url(assets/images/a1c-4-1920x1102.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-16" data-rv-view="126" style="background-image: url(assets/images/a1c-4-1920x1102.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
                 <div class="row"><div class=" col-sm-8 col-sm-offset-2">
                     <div class="mbr-hero animated fadeInUp">
-                        <h1 class="mbr-hero__text"><br><br><br><br><br><br>FORMAS DE PAGO<br></h1>
+                        <h1 class="mbr-hero__text"><br><br><br><br><br><br><br>FORMAS DE PAGO<br></h1>
                         <p class="mbr-hero__subtext">CURSO DE ANIMACIÓN 3D PROFESIONAL NIVEL 1<br><br><br></p>
                     </div>
                     
