--- a/cursos.html
+++ b/cursos.html
@@ -49,14 +49,14 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
                 <div class="row"><div class=" col-sm-8 col-sm-offset-2">
                     <div class="mbr-hero animated fadeInUp">
-                        <h1 class="mbr-hero__text"><br><br><br><br><br><br>ANIMACIÓN 3D</h1>
+                        <h1 class="mbr-hero__text"><br><br><br><br><br><br><br>ANIMACIÓN 3D</h1>
                         <p class="mbr-hero__subtext">CURSO DE ANIMACIÓN 3D PROFESIONAL NIVEL 1<br></p>
                     </div>
                     <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-danger" href="page1.html#header2-u">INFORMACIÓN</a> <a class="mbr-buttons__btn btn btn-lg animated fadeInUp delay btn-success" href="pagar.html#header4-16">PAGAR</a></div>
@@ -362,7 +362,7 @@
                             <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="CONTACTO">
-                            <input type="hidden" value="jtdO86neZzpcTYGNMBgpOa0x1ofCmRZKX9lyP00em0AmpGE2cYNcENZ4HNZbAyOAT8IQUHM7Z+D4++ICPEVpzFJwemtBXlvW5OlM+1kkLpcuJ3xWi9Z1T+dnMnwa8W0R" data-form-email="true">
+                            <input type="hidden" value="DDRsJA83taBNASEqr2IENOocVTFeE0IlEIpOt4s2upu87w/9ekqSJgT+77EAqE/bo7OFCDvb+/TDMZ4te0SbuCbU7i+4VXHIxs1PXatRpjLivFM3KvOYStMIZWIcicfc" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                             </div>
