create github pages

--- a/cursos.html
+++ b/cursos.html
@@ -46,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-n" data-rv-view="67" style="background-image: url(assets/images/a1-7-1920x1102.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0; background-color: rgb(255, 255, 255);"></div>
         <div class="mbr-box__container mbr-section__container container">
@@ -252,7 +252,7 @@
                                     <sup class="mbr-number__left"></sup><span class="mbr-number__value">10</span>
                                 </div>
                             </div>
-                            <div class="mbr-number__caption">Julio</div>
+                            <div class="mbr-number__caption">AGOSTO</div>
                         </div>
                     </div>
                     <div class="mbr-plan__details"><ul><li><strong>SABADO</strong></li><li><strong>9:00 - 12:00 INSTALACION DE SOFTWARE&nbsp;</strong></li><li><strong>14:00 - 19:00</strong></li><li><strong>&nbsp;INTRODUCCION A MAYA</strong></li><li><strong>PRINCIPIOS DE ANIMA</strong></li><li><strong>EJERCICIO 1&nbsp;</strong></li></ul></div>
@@ -273,7 +273,7 @@
                                     <sup class="mbr-number__left"></sup><span class="mbr-number__value">17</span>
                                 </div>
                             </div>
-                            <div class="mbr-number__caption">Julio</div>
+                            <div class="mbr-number__caption">AGOSTO</div>
                         </div>
                     </div>
                     <div class="mbr-plan__details"><ul><li><strong>SABADO
@@ -295,7 +295,7 @@
                                     <sup class="mbr-number__left"></sup><span class="mbr-number__value">24</span>
                                 </div>
                             </div>
-                            <div class="mbr-number__caption">Julio</div>
+                            <div class="mbr-number__caption">AGOSTO</div>
                         </div>
                     </div>
                     <div class="mbr-plan__details"><ul><li><strong>SABADO</strong></li><li><strong>14:00 - 19:00 </strong></li><li><strong>PRINCIPIOS DE ANIMA
@@ -317,7 +317,7 @@
                                     <sup class="mbr-number__left"></sup><span class="mbr-number__value">31</span>
                                 </div>
                             </div>
-                            <div class="mbr-number__caption">Julio</div>
+                            <div class="mbr-number__caption">AGOSTO</div>
                         </div>
                     </div>
                     <div class="mbr-plan__details"><ul><li><strong>SABADO</strong></li><li><strong>14:00 - 19:00 </strong></li><li><strong>PRINCIPIOS DE ANIMA
@@ -344,7 +344,7 @@
                             <div class="hide" data-form-alert-success="true">Gracias tu mensaje a sido enviado.</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="CONTACTO">
-                            <input type="hidden" value="g9fKi0xfR4fKekG0j2nfaowAONi41M3SWD/LfQtn6MeqGqzPvLRUlwD6xUTvVbN+x6bz2s0amA90ctm/DSUsXThEbOVBUgHOiX/k+va3wI23+0wvgbsY/h8GnbmcrU3A" data-form-email="true">
+                            <input type="hidden" value="GtG0FuTF6T4803JDRrDcNkunqg7ynENUT+fgl/vlsd3hPpu4GTFLk5eU2LASxNWeedUAm1fK+jyrNFZ4Jed3b2h7E6XEpympqZTdB2pFl3kgFb3Lce4Wrjn9gWGpBFJf" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Nombre*" data-form-field="Name">
                             </div>
