create github pages

--- a/pagar.html
+++ b/pagar.html
@@ -11,6 +11,7 @@
   
   <title>pagar</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,400&subset=cyrillic,latin,greek,vietnamese">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
@@ -21,7 +22,7 @@
   
 </head>
 <body>
-  <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--collapsed mbr-navbar--transparent" id="ext_menu-v" data-rv-view="124">
+  <section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse mbr-navbar--transparent" id="ext_menu-v" data-rv-view="124">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
@@ -35,7 +36,7 @@
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
                         <div class="mbr-navbar__column">
-                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--activated mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html"><span class="mbrib-touch mbr-iconfont mbr-iconfont-btn" style="font-size: 32px; color: rgb(147, 101, 184);"></span>INICIO</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-9"><span class="mbrib-video mbr-iconfont mbr-iconfont-btn" style="font-size: 32px; color: rgb(226, 80, 65);"></span>REEL</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-166"><span class="mbrib-change-style mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(255, 255, 255);"></span>IDEAS</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-b"><span class="mbrib-shopping-cart mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(122, 198, 115);"></span>TIENDA</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-6"><span class="mbrib-user mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(250, 175, 64);"></span>CONTACTO</a></li>  </ul>                            
+                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html"><span class="mbrib-touch mbr-iconfont mbr-iconfont-btn" style="font-size: 32px; color: rgb(147, 101, 184);"></span>INICIO</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-9"><span class="mbrib-video mbr-iconfont mbr-iconfont-btn" style="font-size: 32px; color: rgb(226, 80, 65);"></span>REEL</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-166"><span class="mbrib-change-style mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(255, 255, 255);"></span>IDEAS</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-b"><span class="mbrib-shopping-cart mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(122, 198, 115);"></span>TIENDA</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="index.html#content5-6"><span class="mbrib-user mbr-iconfont mbr-iconfont-btn" style="font-size: 25px; color: rgb(250, 175, 64);"></span>CONTACTO</a></li> <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="cursos.html" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn" style="font-size: 26px;"></span>WEBGL</a></li>   </ul>                            
                             
                         </div>
                     </nav>
@@ -45,7 +46,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-16" data-rv-view="128" style="background-image: url(assets/images/a1c-4-1920x1102.jpg);">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-16" data-rv-view="128" style="background-image: url(assets/images/a1c-4-1920x1102.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
