--- a/page3.html
+++ b/page3.html
@@ -9,9 +9,9 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-    	            UnityLoader.Error.Handler = function() {};
+    	    	            UnityLoader.Error.Handler = function() {};
             UnityLoader.compatibilityCheck = function(e,t,r) { t(); };
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/test linear 3 cons.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Nueva carpeta.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
@@ -20,7 +20,6 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">webgl</div>
       </div>
     </div>
   </body>
